--- a/demos/basic.html
+++ b/demos/basic.html
@@ -1,97 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Pull To Refresh Demo</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body{
-  margin: 0;
-  padding: 0;
-  font: 15px/1.15 Helvetica, Arial, sans-serif;
-}
-
-.wrap{
-  max-width: 800px;
-  padding: 0 10px;
-  margin: 0 auto;
-}
-
-header{
-  background: #33c;
-  color: #fff;
-  padding: 20px 0;
-  position: relative;
-  z-index: 1;
-}
-header h1{
-  margin: 0;
-}
-#main{
-  padding-top: 20px;
-  transition: transform .3s;
-}
-
-#main .ptr{
-  pointer-events: none;
-  background: silver;
-  position: fixed;
-  z-index: 0;
-  left: 0;
-  top: -120px;
-  height: 120px;
-  right: 0;
-  bottom: 0;
-}
-.trigger {
-  float: right;
-}
-
-#main.-pull {
-  transition: none;
-}
-#main.-release .ptr {
-  background: red;
-}
-
-#main.-refresh {
-  transform: translate3d(0, 50px, 0);
-}
-#main.-refresh .ptr {
-  background: green;
-}
-</style>
-</head>
-<body>
-
-<header>
-  <div class="wrap">
-    <span class='trigger'>PULL</span>
-    <h1>Demo</h1>
-  </div>
-</header>
-
-<div id="main">
-  <div class="ptr">:)</div>
-  <div class="wrap">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
-</div>
-
-<script src="/dist/pulltorefresh.js"></script>
-<script>
-  /* global PullToRefresh */
-  PullToRefresh.init({
-    bodyElement: '#main',
-    triggerElement: '.trigger',
-    refreshFunction: () => console.log('OK'),
-  });
-</script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Pull To Refresh Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/demos/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="wrap"><span class="trigger">&darr;</span>
+        <h1>Demo</h1>
+      </div>
+    </header>
+    <div id="main">
+      <div class="ptr">
+        <div class="box">
+          <div class="content"><span class="icon -on">&darr;</span><span class="icon -off">&hellip;</span></div>
+        </div>
+      </div>
+      <div class="wrap">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <script src="/dist/pulltorefresh.js"></script>
+    <script>
+      /* global PullToRefresh */
+      PullToRefresh.init({
+        bodyElement: '#main',
+        triggerElement: '.trigger',
+        refreshFunction: () => alert('OSOM'),
+      });
+    </script>
+  </body>
 </html>
