--- a/demos/basic.html
+++ b/demos/basic.html
@@ -34,7 +34,7 @@
       PullToRefresh.init({
         bodyElement: '#main',
         triggerElement: '.trigger',
-        refreshFunction: () => alert('OSOM'),
+        refreshFunction: function() { alert('OSOM') }
       });
     </script>
   </body>
