Body trigger area

--- a/demos/basic.html
+++ b/demos/basic.html
@@ -33,8 +33,7 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         bodyElement: '#main',
-        triggerElement: '.trigger',
-        refreshFunction: function() { alert('OSOM') }
+        refreshFunction: function() { console.log('refresh') }
       });
     </script>
   </body>
