--- a/demos/basic.html
+++ b/demos/basic.html
@@ -14,11 +14,6 @@
       </div>
     </header>
     <div id="main">
-      <div class="ptr">
-        <div class="box">
-          <div class="content"><span class="icon -on">&darr;</span><span class="icon -off">&hellip;</span></div>
-        </div>
-      </div>
       <div class="wrap">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -27,6 +22,9 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
+    </div>
+    <div id="footer">
+      <div class="wrap">Footer</div>
     </div>
     <script src="/dist/pulltorefresh.js"></script>
     <script>
