--- a/demos/raw.html
+++ b/demos/raw.html
@@ -29,10 +29,7 @@
     <script src="/dist/pulltorefresh.js"></script>
     <script>
       /* global PullToRefresh */
-      PullToRefresh.init({
-        mainElement: '#main',
-        refreshFunction: function() { console.log('refresh') }
-      });
+      PullToRefresh.init();
     </script>
   </body>
 </html>
