--- a/demos/trigger.html
+++ b/demos/trigger.html
@@ -30,7 +30,7 @@
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
-        bodyElement: '#main',
+        mainElement: '#main',
         triggerElement: '.trigger',
         refreshFunction: function() { console.log('refresh') }
       });
