--- a/demos/basic.html
+++ b/demos/basic.html
@@ -32,7 +32,7 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         mainElement: '#main',
-        refreshFunction: function() { alert('refresh') }
+        onRefresh: function() { alert('refresh') }
       });
     </script>
   </body>
