--- a/demos/raw.html
+++ b/demos/raw.html
@@ -31,7 +31,7 @@
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
-        refreshFunction: function() { alert('refresh') },
+        onRefresh: function() { alert('refresh') },
       });
     </script>
   </body>
