--- a/demos/trigger.html
+++ b/demos/trigger.html
@@ -33,7 +33,7 @@
       PullToRefresh.init({
         mainElement: '#main',
         triggerElement: '.trigger',
-        refreshFunction: function() { alert('refresh') }
+        onRefresh: function() { alert('refresh') }
       });
     </script>
   </body>
