--- a/demos/raw.html
+++ b/demos/raw.html
@@ -30,9 +30,7 @@
     <script src="/dist/pulltorefresh.js"></script>
     <script>
       /* global PullToRefresh */
-      PullToRefresh.init({
-        onRefresh: function() { alert('refresh'); this.release(); },
-      });
-    </script>
+      PullToRefresh.init();
+</script>
   </body>
 </html>
