--- a/demos/basic.html
+++ b/demos/basic.html
@@ -32,8 +32,8 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         mainElement: '#main',
-        onRefresh: function() { alert('refresh') }
+        onRefresh() { alert('refresh'); },
       });
-    </script>
+</script>
   </body>
 </html>
