Fix: skip diff for built files

--- a/demos/basic.html
+++ b/demos/basic.html
@@ -32,8 +32,8 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         mainElement: '#main',
-        onRefresh() { alert('refresh'); },
+        onRefresh: function() { alert('refresh') }
       });
-</script>
+    </script>
   </body>
 </html>
