--- a/demos/promise.html
+++ b/demos/promise.html
@@ -21,7 +21,7 @@
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a></p>
+        <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a><a href="/demos/callback.html">Callback</a></p>
       </div>
     </div>
     <div id="footer">
@@ -32,16 +32,13 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         mainElement: '#main', // above which element?
-        onRefresh: function(){
-          var promise = new Promise(
-            function(resolve, reject){
-              setTimeout(()=>{
-                resolve();
-                alert('refresh');
-              }, 1500);
-            }
-          );
-          return promise;
+        onRefresh: function () {
+          return new Promise(function (resolve) {
+            setTimeout(function () {
+              resolve();
+              alert('refresh');
+            }, 1500);
+          });
         }
       });
     </script>
