--- a/demos/raw.html
+++ b/demos/raw.html
@@ -6,32 +6,47 @@
     <title>Pull To Refresh Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/demos/style.css">
+    <style>
+      .container {
+        background: lightblue
+      }
+      .text {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <div class="wrap">
-        <h1>Demo</h1>
-      </div>
+    <div class="wrap">
+      <h1>Demo</h1>
+    </div>
     </header>
     <div id="main">
-      <div class="wrap">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a><a href="/demos/callback.html">Callback</a></p>
-      </div>
+    <div class="wrap">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a><a href="/demos/callback.html">Callback</a></p>
+    </div>
     </div>
     <div id="footer">
-      <div class="wrap">Footer</div>
+    <div class="wrap">Footer</div>
     </div>
     <script src="/dist/pulltorefresh.js"></script>
-    <script>
+    <script type="text/javascript">
       /* global PullToRefresh */
       PullToRefresh.init({
-        onRefresh: function() { alert('refresh'); },
+        containerClassName: 'container',
+        boxClassName: 'box',
+        contentClassName: 'content',
+        textClassName: 'text',
+        instructionsPullToRefresh: 'go on do not stop',
+        onRefresh: function() {
+          alert('msg');
+        },
       });
     </script>
   </body>
