--- a/demos/shouldptr.html
+++ b/demos/shouldptr.html
@@ -33,7 +33,9 @@
         </ul>
       </div>
     </div>
-    <script src="../dist/pulltorefresh.js"></script>
+    <script src="//unpkg.com/hammer-touchemulator@0.0.2/touch-emulator.js"></script>
+    <script>TouchEmulator()</script>
+    <script src="/dist/pulltorefresh.js"></script>
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
