fix: do not check for stylesheet removal

--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title></title>
-    <script src="/bower_components/qunit/qunit/qunit.js"></script>
+    <script src="../../bower_components/qunit/qunit/qunit.js"></script>
     <script src="/testem.js"></script>
-    <script src="../dist/pulltorefresh.js"></script>
+    <script src="../../dist/pulltorefresh.js"></script>
     <script src="tests.js"></script>
 
-    <link rel="stylesheet" href="/bower_components/qunit/qunit/qunit.css">
+    <link rel="stylesheet" href="../../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
     <div id="qunit"></div>
