--- a/demos/basic.html
+++ b/demos/basic.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Pull To Refresh Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/demos/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
         </ul>
       </div>
     </div>
-    <script src="/dist/pulltorefresh.js"></script>
+    <script src="../dist/pulltorefresh.js"></script>
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
