Build files and minor fixes

--- a/demos/shouldptr.html
+++ b/demos/shouldptr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Pull To Refresh Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/demos/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/shouldptr.html">Should pull to refresh?</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a><a href="/demos/callback.html">Callback</a><a href="/demos/multiple.html">Multiple Instances</a></p>
+        <p class="links"><a href="/demos/raw.html">Raw</a><a href="/demos/basic.html">Basic</a><a href="/demos/shouldptr.html">Should pull to refresh?</a><a href="/demos/trigger.html">Trigger</a><a href="/demos/promise.html">Promise</a><a href="/demos/callback.html">Callback</a><a href="/demos/multiple.html">Multiple Instances</a><a href="/demos/tolerance.html">With tolerance</a></p>
       </div>
     </div>
     <div id="footer">
@@ -33,7 +33,7 @@
         </ul>
       </div>
     </div>
-    <script src="/dist/pulltorefresh.js"></script>
+    <script src="../dist/pulltorefresh.js"></script>
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
