--- a/demos/tolerance.html
+++ b/demos/tolerance.html
@@ -37,6 +37,7 @@
       /* global PullToRefresh */
       PullToRefresh.init({
         mainElement: '#main',
+        distIgnore: 50,
         onRefresh: function() { alert('refresh') }
       });
     </script>
