Revert docs/ => demos/; cleanup

--- a/demos/callback.html
+++ b/demos/callback.html
@@ -36,9 +36,13 @@
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
-        mainElement: '#main',
-        distIgnore: 50,
-        onRefresh: function() { alert('refresh') }
+        mainElement: '#main', // above which element?
+        onRefresh: function (cb) {
+          setTimeout(function () {
+            cb();
+            alert('refresh');
+          }, 1500);
+        }
       });
     </script>
   </body>
