--- a/demos/raw.html
+++ b/demos/raw.html
@@ -36,9 +36,7 @@
     <script>
       /* global PullToRefresh */
       PullToRefresh.init({
-        mainElement: '#main',
-        distIgnore: 50,
-        onRefresh: function() { alert('refresh') }
+        onRefresh: function() { alert('refresh'); },
       });
     </script>
   </body>
