--- a/demos/index.html
+++ b/demos/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Pull To Refresh Demo</title>
+    <title>Pull To Refresh Demo (development)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -32,6 +32,6 @@
         </ul>
       </div>
     </div>
-    <script src="pulltorefresh.min.js"></script>
+    <script src="index.umd.min.js"></script>
   </body>
 </html>
