--- a/demos/multiple.html
+++ b/demos/multiple.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Pull To Refresh Demo</title>
+    <title>Pull To Refresh Demo (development)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -32,50 +32,10 @@
             <p>Item</p>
             <p>Item</p>
             <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
           </div>
         </div>
         <div>
           <div id="area2">
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
-            <p>Item</p>
             <p>Item</p>
             <p>Item</p>
             <p>Item</p>
@@ -107,7 +67,7 @@
         </ul>
       </div>
     </div>
-    <script src="pulltorefresh.min.js"></script>
+    <script src="index.umd.min.js"></script>
     <script>
       /* global PullToRefresh */
       var a = PullToRefresh.init({
