--- a/demos/shouldptr.html
+++ b/demos/shouldptr.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Pull To Refresh Demo (development)</title>
+    <title>Pull To Refresh Demo (test)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
